--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiogram = "2.23.1"
-openai = "^1.3.4"
+openai = "0.28"
 python-dotenv = "^1.0.0"
+sqlalchemy = "^2.0.23"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
